Codion upgrade